--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">Train Scheduler</h1>
-                <p class="lead">Yea...</p>
+                <p class="lead">Add Trains and check when the next one will arrive!</p>
             </div>
     </div>
     <br>
@@ -35,17 +35,12 @@
         </thead>
         <tbody>
             <tr>
-            <th scope="row">Temp</th>
-            <td>orary</td>
-            <td>space</td>
-            <td>holder</td>
-            <td>yeh</td>
             </tr>
             <tr>
         </tbody>
     </table>
     <br>
-    <form id="user-input">
+    <form id="user-input" class="ml-5">
         <h4>Add Trains</h4>
         <div class="form-group">
           <label>Train Name</label>
@@ -57,13 +52,13 @@
         </div>
         <div class="form-group">
             <label>First Train Time</label>
-            <input id="first-train" class="form-control" placeholder="HH-mm: Military Time">
+            <input id="first-train" class="form-control" placeholder="Please enter time in Military Time">
         </div>
         <div class="form-group">
             <label>Frequency</label>
-            <input id="frequency" class="form-control" placeholder="Enter in Minutes">
+            <input id="frequency" class="form-control" placeholder="Please enter number in Minutes">
         </div>
-        <button id="submit" type="submit" class="btn btn-dark">Submit</button>
+        <button id="submit" type="submit" class="btn btn-dark mb-5">Submit</button>
     </form>
 
     <script src="../Train-Scheduler/assets/function.js"></script>
